# beacon

./: README.md  package-lock.json
app/: pubspec.yaml
app/android/app/: build.gradle
app/authentication/: api.dart  auth.dart
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: api.dart  auth.dart  emergency.dart  main.dart  prefs.dart  registration.dart  user.dart  usercubit.dart
app/macos/Runner.xcodeproj/: project.pbxproj
app/web/: index.html
backend/: README.md  db.py  main.py  pyproject.toml
backend/db/: __init__.py
backend/emergency/: __init__.py  classes.py  manager.py
backend/routes/: app.py  web.py
backend/routes/app/: __init__.py  auth.py  depends.py
backend/routes/responder_app/: __init__.py  auth.py  depends.py  endpoints.py
backend/routes/user_app/: __init__.py  auth.py  depends.py  websocket.py
backend/routes/web/: __init__.py
backend/routes/web/admin/: __init__.py  applications.py  auth.py  depends.py
backend/routes/web/provider/: __init__.py  auth.py  depends.py  responder.py  websocket.py
backend/utils/: age.py  crypt.py  exceptions.py  types.py  websocket.py
beacon_responder/: README.md  pubspec.yaml
beacon_responder/.dart_tool/: package_config.json  package_config_subset
beacon_responder/android/: local.properties
beacon_responder/android/app/: build.gradle
beacon_responder/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
beacon_responder/ios/Runner/: Info.plist
beacon_responder/ios/Runner.xcodeproj/: project.pbxproj
beacon_responder/lib/: api.dart  auth.dart  authentication.dart  main.dart  user.dart
beacon_responder/linux/: CMakeLists.txt  my_application.cc
beacon_responder/macos/Runner.xcodeproj/: project.pbxproj
beacon_responder/test/: widget_test.dart
beacon_responder/web/: index.html  manifest.json
beacon_responder/windows/: CMakeLists.txt
beacon_responder/windows/runner/: Runner.rc  main.cpp
web/: README.md  index.html  jsconfig.json  package-lock.json  package.json  svelte.config.js  vite.config.js
web/src/: App.svelte  app.css  main.js  vite-env.d.ts
web/src/lib/: Counter.svelte  (+3 more)
(+26 files in other folders)
