[project]
name = ""
version = ""
description = ""
authors = [
    {name = "kripesh101", email = "33386091+kripesh101@users.noreply.github.com"},
    {name = "kripesh101", email = "aayushbhatt54@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn[standard]>=0.21.1",
    "python-multipart>=0.0.6",
    "sqlmodel>=0.0.8",
    "psycopg2>=2.9.6",
    "cloudinary>=1.32.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
dev = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"
